--- a/.github/workflows/code_formatting.yml
+++ b/.github/workflows/code_formatting.yml
@@ -8,7 +8,8 @@ concurrency:
 
 jobs:
   code-formatting:
-    runs-on: ubuntu-latest
+    # Pin to ubuntu-22.04 to get the correct version of uncrustify.
+    runs-on: ubuntu-22.04
     steps:
     - uses: actions/checkout@v3
     - uses: actions/setup-python@v4
